# omni-agent

./: README.md  pyproject.toml
examples/: skims.txt
outputs/: brand_brief.json  ideas.json  scored_ideas.json
src/: __init__.py  agents.py  config.py  context_extractor.py  processor.py  schemas.py
src/context/: processor.py
src/ideas/: ideator_extractor.py  ideator_processor.py  ideator_schemas.py
src/omni_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/score/: score_extractor.py  score_processor.py  score_schemas.py
